--- a/RayMarchingCpp.vcxproj
+++ b/RayMarchingCpp.vcxproj
@@ -26,6 +26,7 @@
     <None Include="Marcher.frag" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Rotations.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Sphere.h" />
