--- a/RayMarchingCpp.vcxproj
+++ b/RayMarchingCpp.vcxproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
+    <ClInclude Include="RMEnums.h" />
     <ClInclude Include="Rotations.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Sphere.h" />
