--- a/RayMarchingCpp.vcxproj.filters
+++ b/RayMarchingCpp.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Box.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RMEnums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
