--- a/RayMarchingCpp.vcxproj.filters
+++ b/RayMarchingCpp.vcxproj.filters
@@ -21,12 +21,15 @@
     <ClCompile Include="Rotations.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RMShape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Marcher.frag" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Shape.h">
+    <ClInclude Include="RMShape.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Rotations.h">
