--- a/RayMarchingCpp.vcxproj
+++ b/RayMarchingCpp.vcxproj
@@ -24,7 +24,6 @@
     <ClCompile Include="Rotations.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VerletObject.cpp" />
-    <ClCompile Include="VerletObject.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Marcher.frag" />
@@ -34,6 +33,7 @@
     <ClInclude Include="Rotations.h" />
     <ClInclude Include="RMShape.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="VerletObject.h" />
     <ClInclude Include="VerletSolver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +98,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(VC_SourcePath)include;</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(VC_SourcePath)lib;</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -134,6 +136,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>sfml-window-s-d.lib;sfml-system-s-d.lib;sfml-graphics-s-d.lib;opengl32.lib;winmm.lib;gdi32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
