Implement some FXAA

--- a/RayMarchingCpp.vcxproj
+++ b/RayMarchingCpp.vcxproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="alps_field_4k.hdr" />
+    <None Include="FXAA.frag" />
     <None Include="Marcher.frag" />
   </ItemGroup>
   <ItemGroup>
