Implement a crude raycast method

--- a/RayMarchingCpp.vcxproj.filters
+++ b/RayMarchingCpp.vcxproj.filters
@@ -62,7 +62,9 @@
     <None Include="Marcher.frag">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="FXAA.frag" />
+    <None Include="FXAA.frag">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RMShape.h">
